--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+.image-container:hover img {
+  transform: scale(1.3);
+  transition: transform 0.5s;
+}
